# Red-DiscordBot

./: .bandit.yml  .cherry_picker.toml  .codeclimate.yml  .codespell-ignore-lines  .codespell-ignore-words  .codespellrc  .dockerignore  .flake8  .git-blame-ignore-revs  .git_archive_info.txt  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .travis.yml  CHANGES.rst  CODEOWNERS  CONTRIBUTING.md  Docker-Compose.yaml  Dockerfile  Dockerfile.arm  Dockerfile.pip  Dockerfile.pip.arm  LICENSE  MANIFEST.in  Makefile  Pipfile  QuantumComputing.git  README.MD  README.md  README.rst  SECURITY.md  autolabler.yml  bleh  blip.txt  blup.txt  cleverbot3.py  com.github.Red.DiscordBot.yml  (+57 more)
.github/: CODEOWNERS  CONTRIBUTING.md  FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: 01_command_bug.yml  02_other_bugs.yml  03_enhancements.yml  04_feature_request.yml  ISSUE_TEMPLATE.md  command_bug.md  command_bug.yml  config.yml  enhancements.yml  feature_req.md  feature_request.yml  other_bug.md  other_bugs.yml
.github/PULL_REQUEST_TEMPLATE/: PULL_REQUEST_TEMPLATE.md  bugfix.md  enhancement.md  new_feature.md  release.md  (+1 more)
.reuse/: dep5
LICENSES/: MIT.txt
Red-DiscordBot-3.3.11.dev1/: PKG-INFO  setup.cfg  setup.py
bluebot/: __init__.py  __main__.py  launcher.py  logging.py  setup.py
changelog.d/: 1734.docs.1.rst  1734.docs.2.rst  1734.docs.3.rst  1734.docs.5.rst  1734.docs.6.rst  2105.docs.rst  2429.enhance.rst  2446.fix.rst  2446.misc.1.rst  2446.misc.2.rst  2474.feature.rst  2558.docs.rst  2571.misc.rst  2654.feature.rst  2723.feature.rst  2723.misc.rst  2726.docs.rst  2804.feature.1.rst  2809.feature.rst  2809.misc.rst  2836.feature.rst  2836.misc.rst  2840.misc.rst  2845.feature.1.rst  2845.feature.2.rst  2845.feature.rst  2845.misc.rst  2849.misc.rst  2863.bugfix.rst  2863.fix.rst  2872.feature.rst  2875.enhance.rst  2881.enhance.rst  2881.misc.rst  2882.docs.rst  2885.misc.rst  2888.bugfix.rst  2892.bugfix.1.rst  2892.enhance.rst  2892.fix.1.rst  (+201 more)
cogs/: .#mos.py  account.py  activitylog.py  admin.py  adventure.py  advgoogle.py  alias.py  alot.py  anime.py  animelist.py  antilink.py  ascii.py  audio.py  autoeconomy.py  autorole.py  away.py  ayy.py  bartender.py  bdwiki.py  bettermod.py  birthday.py  botinfo.py  botstats.py  brocode.py  buyrole.py  casino.py  champgg.py  chuck.py  cleverbot.py  code.py  compliment.py  configuration.py  consoletalk.py  core.py  countrycode.py  coupon.py  customcom.py  customgcom.py  customjoinleave.py  datadog.py  (+150 more)
core/: __init__.py  bank.py  bot.py  checks.py  cli.py  cog_manager.py  config.py  core_commands.py  data_manager.py  db.py  dev_commands.py  events.py  global_checks.py  i18n.py  json_flusher.py  json_io.py  modlog.py  owner.py  sentry_setup.py  settings.py
debian/: changelog  control  copyright  files  red-discordbot.links  red-discordbot.service  rules
discord/: __init__.py  __main__.py  abc.py  activity.py  audit_logs.py  backoff.py  calls.py  channel.py  client.py  colour.py  context_managers.py  embeds.py  emoji.py  enums.py  errors.py  file.py  gateway.py  guild.py  http.py  invite.py  iterators.py  member.py  message.py  mixins.py  object.py  opus.py  permissions.py  player.py  raw_models.py  reaction.py  relationship.py  role.py  shard.py  state.py  user.py  utils.py  voice_client.py  webhook.py
docker/: .env.example  .gitignore  Dockerfile  base-config.json  basic-config.json  config.json  docker-compose.yml  docker-entrypoint.sh  entrypoint.sh  run.sh  run_red.sh
docs/: Makefile  about_venv.rst  admin.rst  alias.rst  audio.rst  autostart_mac.rst  autostart_pm2.rst  autostart_systemd.rst  autostart_win.rst  autostart_windows.rst  bank.rst  bot_application_guide.rst  changelog_3_1_0.rst  changelog_3_2_0.rst  changelog_3_3_0.rst  changelog_3_4_0.rst  changelog_alt_1.rst  changelog_alt_2.rst  changelog_alt_3.rst  changelog_current_look.rst  cog_customcom.rst  cog_dataconverter.rst  cog_downloader.rst  cog_permissions.rst  conf.py  downloader.rst  economy.rst  framework_apikeys.rst  framework_app_commands.rst  framework_audio.rst  framework_bank.rst  framework_bot.rst  framework_checks.rst  framework_checks_app_commands.rst  framework_cogmanager.rst  framework_commands.rst  framework_config.rst  framework_context.rst  framework_datamanager.rst  framework_downloader.rst  (+48 more)
lib/: OleFileIO_PL.py  ipgetter.py  tabulate.py
localtracks/: README.txt
playlists/: 50rock.txt  emotion_fm.txt  espantoso.txt  krose.txt  monstercat.txt  neo_scavenger.txt  new_vegas.txt  nightcore.txt  pokemon_silver.txt  transistor.txt  xxyyxx.txt
redbot/: __init__.py  __main__.py  _discord_overloads.py  _event_loop_handlers.py  _log.py  _version.py  aiohttp.py  json.py  launcher.py  logging.py  meta.py  migrate.py  mujson.py  safety.py  setup.py  update.py  updater.py
requirements/: base.in  base.txt  extra-doc.in  extra-doc.txt  extra-postgres.in  extra-postgres.txt  extra-style.in  extra-style.txt  extra-test.in  extra-test.txt
schema/: blue_cog.schema.json  blue_cog_repo.schema.json  red_cog.schema.json  red_cog_repo.schema.json  trivia.schema.json
scripts/: redbot-setup.py  redbot.py
subaru/: .gitignore  README.md  project.clj
tests/: conftest.py  rpc_test.html
tools/: bumpdeps.py  check_changelog_entries.sh  dev-requirements.txt  edit_testrepo.py  primary_deps.ini  release_helper.py  requirements.ini  update_debian.py
trivia/: 2015.txt  games.txt  general.txt  general2.txt  harrypotter.txt  leaguefacts.txt  leagueults.txt
yaml_output/: 2015.yaml  2016.yaml  anime.yaml  artandliterature.yaml  boombeach.yaml  cars.yaml  clashroyale.yaml  computers.yaml  disney.yaml  dota2abilities.yaml  dota2items.yaml  elements.yaml  entertainment.yaml  finalfantasy.yaml  games.yaml  general.yaml  greekmyth.yaml  harrypotter.yaml  leagueoflegends.yaml  leagueults.yaml  nba.yaml  overwatch.yaml  pokemon.yaml  slogans.yaml  starwars.yaml  uscapitals.yaml  usflags.yaml  usmap.yaml  warcraft.yaml  whosthatpokemon.yaml  worldcapitals.yaml  worldflags.yaml  worldmap.yaml
(+3939 files in other folders)
