[tool.poetry]
name = "red-discordbot"

# This is bumped automatically by release workflow (`.github/workflows/scripts/bump_version.py`)
version = "3.5.13.dev9+g43c411e"
description = "A highly customizable Discord bot"
authors = ["Cog Creators"]
readme = "README.md"
license = "GPL-3.0-only"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Natural Language :: English",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Communications :: Chat",
]
packages = [{ include = "redbot" }]
include = [
  "LICENSE",
  "redbot/**/*.LICENSE",
  "redbot/**/locales/*.po",
  "redbot/**/data/*",
  "redbot/**/*.export",
  "redbot/py.typed",
]

[tool.poetry.urls]
"Homepage" = "https://github.com/Cog-Creators/Red-DiscordBot"
"Discord Server" = "https://discord.gg/red"
"Documentation" = "https://docs.discord.red"
"Donate on Patreon" = "https://www.patreon.com/Red_Devs"
"Issue Tracker" = "https://github.com/Cog-Creators/Red-DiscordBot/issues"
"Source Code" = "https://github.com/Cog-Creators/Red-DiscordBot"
"Changelog" = "https://docs.discord.red/en/stable/changelog.html"

[tool.poetry.dependencies]
python = ">= 3.8.1, < 3.12"
aiohttp = "^3.10.9"
aiohttp-json-rpc = "^0.13.3"
apsw = "^3.46.1.0"
babel = "^2.16.0"
brotli = "^1.1.0"
click = "^8.1.7"
discord-py = "^2.4.0"
markdown = "^3.7"
orjson = "^3.10.7"
packaging = "^24.1"
platformdirs = "^4.3.6"
psutil = "^6.0.0"
python-dateutil = "^2.9.0.post0"
pyyaml = "^6.0.2"
rapidfuzz = "^3.8"
red-commons = "^1.0.0"
red-lavalink = "^0.11.0"
rich = "^13.9.2"
schema = "^0.7.7"
typing-extensions = "^4.12.2"
yarl = "^1.13.1"
uvloop = { version = "^0.20.0", markers = "sys_platform != 'win32' and platform_python_implementation == 'CPython'" }
distro = { version = "^1.9.0", markers = "sys_platform == 'linux'" }
asyncpg = { version = "^0.29.0", optional = true }

[tool.poetry.group.dev.dependencies]
sphinx = "*"
sphinx-prompt = "*"
sphinx-rtd-theme = "^3.0.0"
sphinxcontrib-trio = "^1.1.2"
pytest = "^8.3.3"
tox = "^4.21.2"
pytest-asyncio = "0.21.2"
pytest-mock = "^3.14.0"
black = "^23.12.1"
asyncpg = "^0.29.0"

[tool.poetry.extras]
postgres = ["asyncpg"]

[tool.poetry.scripts]
redbot = "redbot.__main__:main"
redbot-setup = "redbot.setup:run_cli"

[tool.poetry.plugins.pytest11]
red-discordbot = "redbot.pytest"

[tool.poetry-git-version-plugin]
alpha_version_format = "{version}.dev{distance}+g{commit_hash}"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
required-version = '23'
target-version = ['py38']
include = '\.py$'
force-exclude = '''
/(
    redbot\/vendored
)/
'''


[tool.pytest.ini_options]
asyncio_mode = 'auto'
