[metadata]
name = Red-DiscordBot
description = A highly customisable Discord bot
license = GPL-3.0
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
author = Cog-Creators
author_email = cogcreators@gmail.com
url = https://github.com/Cog-Creators/Red-DiscordBot
project_urls =
    Discord Server = https://discord.gg/red
    Documentation = https://docs.discord.red
    Donate on Patreon = https://www.patreon.com/Red_Devs
    Issue Tracker = https://github.com/Cog-Creators/Red-DiscordBot/issues
    Source Code = https://github.com/Cog-Creators/Red-DiscordBot
classifiers =
    # List at https://pypi.org/pypi?%3Aaction=list_classifiers
    Development Status :: 5 - Production/Stable
    Framework :: AsyncIO
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Communications :: Chat
license_files =
    LICENSE
    redbot/**/*.LICENSE

[options]
packages = find_namespace:
python_requires = >=3.8.1,<3.10
include_package_data = True
install_requires =
    aiohttp==3.7.4.post0
    aiohttp-json-rpc==0.13.3
    aiosqlite==0.17.0
    appdirs==1.4.4
    apsw-wheels==3.36.0.post1
    async-timeout==3.0.1
    attrs==21.2.0
    Babel==2.9.1
    cffi==1.14.6
    chardet==4.0.0
    click==8.0.1
    colorama==0.4.4
    commonmark==0.9.1
    contextlib2==21.6.0
    discord.py @ git+https://github.com/Rapptz/discord.py@3d914e08e0c7df370987592affb3655d2a12f7d1#egg=discord.py
    distro==1.6.0; sys_platform == "linux"
    fuzzywuzzy==0.18.0
    idna==3.2
    Markdown==3.3.4
    multidict==5.1.0
    psutil==5.8.0
    pycparser==2.20
    Pygments==2.10.0
    PyNaCl==1.4.0
    python-dateutil==2.8.2
    python-Levenshtein-wheels==0.13.2
    pytz==2021.1
    PyYAML==5.4.1
    Red-Commons==1.0.0
    Red-Lavalink==0.11.0rc0
    rich==10.9.0
    schema==0.7.4
    six==1.16.0
    typing-extensions==3.10.0.2
    uvloop==0.16.0; sys_platform != "win32" and platform_python_implementation == "CPython"
    yarl==1.6.3

[options.extras_require]
docs =
    alabaster==0.7.12
    certifi==2021.5.30
    charset-normalizer==2.0.4
    docutils==0.16
    imagesize==1.2.0
    Jinja2==3.0.1
    MarkupSafe==2.0.1
    packaging==21.0
    pyparsing==2.4.7
    requests==2.26.0
    snowballstemmer==2.1.0
    Sphinx==4.1.2
    sphinx-prompt==1.5.0
    sphinx-rtd-theme==0.5.2
    sphinxcontrib-applehelp==1.0.2
    sphinxcontrib-devhelp==1.0.2
    sphinxcontrib-htmlhelp==2.0.0
    sphinxcontrib-jsmath==1.0.1
    sphinxcontrib-qthelp==1.0.3
    sphinxcontrib-serializinghtml==1.1.5
    sphinxcontrib-trio==1.1.2
    urllib3==1.26.6
postgres =
    asyncpg==0.24.0
style =
    black==22.1.0
    mypy-extensions==0.4.3
    pathspec==0.9.0
    regex==2021.8.28
    toml==0.10.2
    typed-ast==1.4.3
test =
    astroid==2.7.3
    iniconfig==1.1.1
    isort==5.9.3
    lazy-object-proxy==1.6.0
    mccabe==0.6.1
    packaging==21.0
    platformdirs==2.3.0
    pluggy==1.0.0
    py==1.10.0
    pylint==2.10.2
    pyparsing==2.4.7
    pytest==6.2.5
    pytest-asyncio==0.15.1
    pytest-mock==3.6.1
    toml==0.10.2
    wrapt==1.12.1
all =
    %(postgres)s
dev =
    %(all)s
    %(docs)s
    %(style)s
    %(test)s

[options.entry_points]
console_scripts =
    redbot=redbot.__main__:main
    redbot-setup=redbot.setup:run_cli
    redbot-launcher=redbot.launcher:main
pytest11 =
    red-discordbot=redbot.pytest

[options.packages.find]
include =
    redbot
    redbot.*
